--- a/Momentum/index.html
+++ b/Momentum/index.html
@@ -2,138 +2,163 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Momentum Physio | Newtownabbey</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Momentum Physiotherapy | Pain Relief & Rehabilitation in Newtownabbey</title>
+  <meta name="description" content="Momentum Physiotherapy helps you move better and get pain-free with expert injury rehab, sports rehab, acupuncture, dry needling, and more in Newtownabbey." />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color:#f6f6f6;
-      color: #032531
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f6f6f6;
+      color: #032531;
+      line-height: 1.6;
     }
-    .hero-text {
-      color: #075f85;
-      padding: 2rem;
-      border-radius: 10px;
+
+    .hero-section {
+      background-color: #075f85;
+      color: white;
+      padding: 3rem 1rem;
+      text-align: center;
+      border-radius: 0 0 20px 20px;
     }
+
+    .hero-section h1 {
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+
     .section-padding {
-      padding: 60px 0;
+      padding: 4rem 0;
     }
+
+    h2 {
+      color: #075f85;
+      font-weight: 700;
+      margin-bottom: 2rem;
+    }
+
+    .service-list li {
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+    }
+
+    blockquote {
+      font-style: italic;
+      border-left: 5px solid #075f85;
+      padding-left: 1rem;
+      margin: 1.5rem 0;
+      color: #444;
+      
+      border-radius: 5px;
+    }
+
     footer {
       background-color: #f6f6f6;
-      padding: 40px 0;
+      padding: 2rem 1rem;
+      text-align: center;
+      color: #555;
+      font-size: 0.9rem;
+    }
+
+    a {
+      color: #075f85;
+      text-decoration: none;
+    }
+
+    a:hover,
+    a:focus {
+      text-decoration: underline;
     }
   </style>
 </head>
 
 <body>
 
+  <header class="hero-section" role="banner">
+    <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
+    <h1>Momentum Physiotherapy</h1>
+    <p>Helping you move better, feel stronger, and get back to doing what you love.</p>
+  </header>
 
-  <!-- 
-  <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://via.placeholder.com/1600x600?text=Professional+Physiotherapy" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block hero-text">
-          <h1>Momentum Physio</h1>
-          <p>Helping you move better, feel better, live better.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/1600x600?text=Friendly+Experienced+Team" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block hero-text">
-          <h2>Your Journey Starts Here</h2>
-          <p>Compassionate care, tailored to your needs.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://via.placeholder.com/1600x600?text=Recovery+with+Momentum" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block hero-text">
-          <h2>Recover with Confidence</h2>
-          <p>Modern treatment techniques that work.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-Carousel -->
-  <!-- About Section -->
- <section class="section-padding text-center">
-  <div class="container">
-    <img src="logo.jpg" alt="Momentum Physio Logo" class="mb-4" style="max-width: 200px;">
-    <h2 class="mb-4">Welcome to Momentum Physio</h2>
-    <p class="lead">Located in the heart of Newtownabbey, Momentum Physio is dedicated to helping you reach your health goals</p>
-  </div>
-</section>
+  <main class="container" role="main">
 
-  <!-- Services Section -->
-  <section class="bg-light section-padding">
-    <div class="container">
-      <h2 class="text-center mb-5">Our Services</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Injury Rehabilitation</h5>
-              <p class="card-text">Personalised treatment plans to restore function and speed up recovery from sports, work or daily life injuries.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Chronic Pain Management</h5>
-              <p class="card-text">Evidence-based approaches to reduce pain and improve your quality of life with ongoing support and education.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Postural & Movement Assessments</h5>
-              <p class="card-text">Identify and correct imbalances with expert assessments tailored to your lifestyle and goals.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+    <section aria-labelledby="intro-heading" class="section-padding text-center">
+      <h2 id="intro-heading">Are You Ready to Be Pain-Free?</h2>
+      <p>At <strong>Momentum Physiotherapy</strong>, we’re here to help you move better, feel stronger, and get back to doing what you love. Whether you're recovering from an injury, managing chronic pain, or looking to improve mobility, our expert, hands-on approach is tailored to your goals.</p>
+    </section>
 
-  <!-- Contact Section -->
-  <section class="section-padding text-center">
-    <div class="container">
-      <h2 class="mb-4">Get In Touch</h2>
-      <p class="lead">Visit us at Unit 3, 183-185 Ballyclare Road, Newtownabbey BT36 5JP</p>
-      <!-- Phone Contact Section -->
+    <section aria-labelledby="services-heading" class="section-padding bg-light rounded p-4 shadow-sm">
+      <h2 id="services-heading" class="text-center">Our Services</h2>
+      <ul class="service-list list-unstyled mx-auto" style="max-width: 600px;">
+        <li>Mobilisations</li>
+        <li>Pre/Post Operative Rehab</li>
+        <li>Sports Rehabilitation</li>
+        <li>Sports Taping</li>
+        <li>K Taping</li>
+        <li>Acupuncture</li>
+        <li>Dry Needling</li>
+        <li>Sports Massage</li>
+      </ul>
+    </section>
 
-    <p class="lead">
-      Speak to a member of our friendly team by calling:
-    </p>
-    <p class="fs-4 fw-bold">
-      <a href="tel:+447926166335" class="text-decoration-none text-dark">07926166335</a>
-    </p>
+    <section aria-labelledby="testimonials-heading" class="section-padding">
+      <h2 id="testimonials-heading" class="text-center">Testimonials</h2>
 
+      <article>
+        <blockquote>
+          <p>Fantastic. I’m an elite amateur golfer who has been struggling with an ongoing wrist injury. Colm was extremely helpful throughout the recovery process and I couldn’t recommend him enough.</p>
+          <footer>— Satisfied Patient</footer>
+        </blockquote>
+      </article>
 
-      <p>Email us at <a href="mailto:info@momentum-physio.com">info@momentum-physio.com</a></p>
-    </div>
-  </section>
+      <article>
+        <blockquote>
+          <p>Great rehab on my knee and calf after a skiing injury—really well looked after by Colm. Very professional and knowledgeable—thanks for all your help!</p>
+          <footer>— Happy Client</footer>
+        </blockquote>
+      </article>
 
-  <!-- Footer -->
-  <footer class="text-center">
-    <div class="container">
-      <p class="mb-0">&copy; 2025 Momentum Physio. All rights reserved.</p>
-    </div>
+      <article>
+        <blockquote>
+          <p>Colm was excellent, great advice for recovery. Very helpful during the 6 weeks after injury. Great guy!</p>
+          <footer>— Patient Review</footer>
+        </blockquote>
+      </article>
+
+      <article>
+        <blockquote>
+          <p>I had my son up at Colm McCabe for a few different injuries and he was fantastic. Everything he explained was very clear and easy to follow. ⭐️⭐️⭐️⭐️⭐️</p>
+          <footer>— Parent of Patient</footer>
+        </blockquote>
+      </article>
+
+      <article>
+        <blockquote>
+          <p>Had physio for an MCL injury for a few weeks with Colm. Couldn’t recommend him enough, very professional and good craic. 10/10</p>
+          <footer>— Grateful Client</footer>
+        </blockquote>
+      </article>
+    </section>
+
+    <section aria-labelledby="contact-heading" class="section-padding text-center bg-light rounded p-4 shadow-sm">
+      <h2 id="contact-heading">Get in Touch</h2>
+      <address>
+        <p>Visit us at:</p>
+        <p><strong>New Business Location TBA soon!</strong></p>
+        <p>Call us: <a href="tel:+447926166335">07926 166335</a></p>
+        <p>Email: <a href="mailto:info@momentum-physio.com">info@momentum-physio.com</a></p>
+      </address>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Momentum Physiotherapy. All rights reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
