--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section aria-labelledby="intro-heading" class="section-padding text-center">
       <h2 id="intro-heading">Are You Ready to Be Pain-Free?</h2>
-      <p>At <strong>Momentum Physiotherapy</strong>, we’re here to help you move better, feel stronger, and get back to doing what you love. Whether you're recovering from an injury, managing chronic pain, or looking to improve mobility, our expert, hands-on approach is tailored to your goals.</p>
+      <p>At <strong>Momentum Physiotherapy, we’re here to help you move better, feel stronger, and get back to doing what you love.</strong> Whether you're recovering from an injury, managing chronic pain, or looking to improve mobility, our expert, hands-on approach is tailored to your goals.</p>
     </section>
 
     <section aria-labelledby="services-heading" class="section-padding bg-light rounded p-4 shadow-sm">
