--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Momentum Physiotherapy | Pain Relief & Rehabilitation in Newtownabbey</title>
   <meta name="description" content="Momentum Physiotherapy helps you move better and get pain-free with expert injury rehab, sports rehab, acupuncture, dry needling, and more in Newtownabbey." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="/favicon.png">
+
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
