--- a/Momentum/index.html
+++ b/Momentum/index.html
@@ -145,8 +145,8 @@
       <h2 id="contact-heading">Get in Touch</h2>
       <address>
         <p>Visit us at:</p>
-        <p><strong>New Business Location TBA soon!</strong></p>
-        <p>Call us: <a href="tel:+447926166335">07926 166335</a></p>
+        <p><strong>29 Ballyclare Road, Glengormley</strong></p>
+        <p>Call us: <a href="tel:+447701300301">07701 300 301</a></p>
         <p>Email: <a href="mailto:info@momentum-physio.com">info@momentum-physio.com</a></p>
       </address>
     </section>
