--- a/Momentum/index.html
+++ b/Momentum/index.html
@@ -76,14 +76,13 @@
 <body>
 
   <header class="hero-section" role="banner">
-    <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
-    <h1>Momentum Physiotherapy</h1>
-    <p>Helping you move better, feel stronger, and get back to doing what you love.</p>
+    <img src="banner.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 100%; margin-bottom: 1rem;" />
   </header>
 
   <main class="container" role="main">
 
     <section aria-labelledby="intro-heading" class="section-padding text-center">
+       <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
       <h2 id="intro-heading">Are You Ready to Be Pain-Free?</h2>
       <p>At <strong>Momentum Physiotherapy, we’re here to help you move better, feel stronger, and get back to doing what you love.</strong> Whether you're recovering from an injury, managing chronic pain, or looking to improve mobility, our expert, hands-on approach is tailored to your goals.</p>
     </section>
