--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <title>Momentum Physiotherapy | Pain Relief & Rehabilitation in Newtownabbey</title>
   <meta name="description" content="Momentum Physiotherapy helps you move better and get pain-free with expert injury rehab, sports rehab, acupuncture, dry needling, and more in Newtownabbey." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="icon" type="image/png" href="/favicon.png">
-
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -78,14 +76,13 @@
 <body>
 
   <header class="hero-section" role="banner">
-    <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
-    <h1>Momentum Physiotherapy</h1>
-    <p>Helping you move better, feel stronger, and get back to doing what you love.</p>
+    <img src="banner.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 100%; margin-bottom: 1rem;" />
   </header>
 
   <main class="container" role="main">
 
     <section aria-labelledby="intro-heading" class="section-padding text-center">
+       <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
       <h2 id="intro-heading">Are You Ready to Be Pain-Free?</h2>
       <p>At <strong>Momentum Physiotherapy, we’re here to help you move better, feel stronger, and get back to doing what you love.</strong> Whether you're recovering from an injury, managing chronic pain, or looking to improve mobility, our expert, hands-on approach is tailored to your goals.</p>
     </section>
@@ -147,8 +144,8 @@
       <h2 id="contact-heading">Get in Touch</h2>
       <address>
         <p>Visit us at:</p>
-        <p><strong>New Business Location TBA soon!</strong></p>
-        <p>Call us: <a href="tel:+447926166335">07926 166335</a></p>
+        <p><strong>29 Ballyclare Road, Glengormley</strong></p>
+        <p>Call us: <a href="tel:+447701300301">07701 300 301</a></p>
         <p>Email: <a href="mailto:info@momentum-physio.com">info@momentum-physio.com</a></p>
       </address>
     </section>
@@ -163,4 +160,3 @@
 </body>
 
 </html>
-
