--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
 
   <header class="hero-section" role="banner">
-    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 180px; margin-bottom: 1rem;" />
+    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 75%; margin-bottom: 1rem;" />
   </header>
 
   <main class="container" role="main">
