--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     .hero-section {
       background-color: #075f85;
       color: white;
-      padding: 3rem 1rem;
       text-align: center;
       border-radius: 0 0 20px 20px;
     }
@@ -76,7 +75,7 @@
 <body>
 
   <header class="hero-section" role="banner">
-    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 75%; margin-bottom: 1rem;" />
+    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 75%;" />
   </header>
 
   <main class="container" role="main">
