--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
   <header class="hero-section" role="banner">
-    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 85%;" />
+    <img src="banner.jpg" alt="Momentum Physiotherapy Banner" style="max-width: 80%;" />
   </header>
 
   <main class="container" role="main">
@@ -139,6 +139,7 @@
     </section>
 
     <section aria-labelledby="contact-heading" class="section-padding text-center bg-light rounded p-4 shadow-sm">
+      <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
       <h2 id="contact-heading">Get in Touch</h2>
       <address>
         <p>Visit us at:</p>
