--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </article>
     </section>
 
-    <section aria-labelledby="contact-heading" class="section-padding text-center bg-light rounded p-4 shadow-sm">
+    <section aria-labelledby="contact-heading" class="section-padding text-center rounded p-4">
       <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
       <address>
         <p>Visit us at:</p>
