--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </ul>
     </section>
 
-    <section aria-labelledby="testimonials-heading" class="section-padding">
+    <section aria-labelledby="testimonials-heading" class="section-padding bg-light rounded p-4 shadow-sm">
       <h2 id="testimonials-heading" class="text-center">Testimonials</h2>
 
       <article>
@@ -138,8 +138,8 @@
       </article>
     </section>
 
-    <section aria-labelledby="contact-heading" class="section-padding text-center rounded p-4">
-      <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px; margin-bottom: 1rem;" />
+    <section aria-labelledby="contact-heading" class="section-padding text-center">
+      <img src="logo.jpg" alt="Momentum Physiotherapy Logo" style="max-width: 180px;" />
       <address>
         <p>Visit us at:</p>
         <p><strong>29 Ballyclare Road, Glengormley</strong></p>
